--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <section id="hero" class="min-h-screen hero-gradient flex flex-col justify-center items-center px-6 text-center border-b border-slate-800">
         <div class="max-w-4xl">
-            <span class="text-green-500 font-bold tracking-[0.2em] uppercase text-sm mb-4 block">South Africa's #1 AI Compliance Tool</span>
+            <span class="text-green-500 font-bold tracking-[0.2em] uppercase text-sm mb-4 block">Affordable South African Legal Tech</span>
             <h1 class="text-5xl md:text-7xl font-black text-white leading-tight mb-6">Automate your <span class="text-green-500 italic">Legal Audits.</span></h1>
             <p class="text-slate-400 text-lg md:text-xl max-w-2xl mx-auto mb-10 leading-relaxed">
-                Professional POPIA and BCEA risk assessments for South African SMEs. Secure, fast, and 2025-compliant.
+                Professional POPIA and BCEA risk assessments designed for South African budgets. Secure, fast, and 2025-compliant.
             </p>
             <div class="flex flex-col md:flex-row gap-4 justify-center">
                 <a href="#pricing" class="bg-green-600 hover:bg-green-500 text-slate-950 font-black px-10 py-5 rounded-2xl text-xl transition-all shadow-2xl flex items-center justify-center">
@@ -37,29 +37,28 @@
     <section id="pricing" class="py-32 bg-slate-950">
         <div class="max-w-6xl mx-auto px-6">
             <div class="text-center mb-16">
-                <h2 class="text-4xl font-black text-white uppercase italic tracking-tighter">Choose Your Protection Plan</h2>
+                <h2 class="text-4xl font-black text-white uppercase italic tracking-tighter">Budget-Friendly Protection</h2>
                 <div class="h-1 w-20 bg-green-500 mx-auto mt-4"></div>
             </div>
             
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="pricing-card bg-slate-900 border border-slate-800 p-8 rounded-3xl transition-all">
                     <h3 class="text-xl font-bold text-white mb-2 uppercase">Starter</h3>
-                    <div class="text-4xl font-black text-green-500 mb-6">R450<span class="text-sm text-slate-500 font-normal"> /mo</span></div>
+                    <div class="text-4xl font-black text-green-500 mb-6">R199<span class="text-sm text-slate-500 font-normal"> /mo</span></div>
                     <ul class="space-y-4 mb-10 text-slate-400 text-sm">
-                        <li class="flex items-center gap-2">🟢 5 Contract Audits</li>
+                        <li class="flex items-center gap-2">🟢 3 Contract Audits</li>
                         <li class="flex items-center gap-2">🟢 POPIA Red Flagging</li>
                         <li class="flex items-center gap-2">🟢 Basic PDF Reports</li>
-                        <li class="flex items-center gap-2">🟢 24-Hour AI Access</li>
                     </ul>
                     <a href="#audit-lab" class="block text-center w-full py-3 rounded-xl border border-slate-700 font-bold hover:bg-slate-800 transition-all">Select Starter</a>
                 </div>
 
                 <div class="pricing-card bg-slate-900 border-2 border-green-500 p-8 rounded-3xl shadow-2xl relative scale-105 z-10">
-                    <span class="absolute -top-4 left-1/2 -translate-x-1/2 bg-green-500 text-slate-950 text-[10px] font-black px-6 py-1 rounded-full uppercase tracking-widest">Most Popular</span>
+                    <span class="absolute -top-4 left-1/2 -translate-x-1/2 bg-green-500 text-slate-950 text-[10px] font-black px-6 py-1 rounded-full uppercase tracking-widest">Best Value</span>
                     <h3 class="text-xl font-bold text-white mb-2 uppercase">Business</h3>
-                    <div class="text-4xl font-black text-green-500 mb-6">R1,250<span class="text-sm text-slate-500 font-normal"> /mo</span></div>
+                    <div class="text-4xl font-black text-green-500 mb-6">R499<span class="text-sm text-slate-500 font-normal"> /mo</span></div>
                     <ul class="space-y-4 mb-10 text-slate-300 text-sm">
-                        <li class="flex items-center gap-2">🟢 Unlimited Audits</li>
+                        <li class="flex items-center gap-2">🟢 15 Contract Audits</li>
                         <li class="flex items-center gap-2">🟢 BCEA & Labour Analysis</li>
                         <li class="flex items-center gap-2">🟢 Professional PDF Export</li>
                         <li class="flex items-center gap-2">🟢 Risk Score Technology</li>
@@ -68,13 +67,13 @@
                 </div>
 
                 <div class="pricing-card bg-slate-900 border border-slate-800 p-8 rounded-3xl transition-all">
-                    <h3 class="text-xl font-bold text-white mb-2 uppercase">Enterprise</h3>
-                    <div class="text-4xl font-black text-green-500 mb-6">R4,500<span class="text-sm text-slate-500 font-normal"> /mo</span></div>
+                    <h3 class="text-xl font-bold text-white mb-2 uppercase">Professional</h3>
+                    <div class="text-4xl font-black text-green-500 mb-6">R1,450<span class="text-sm text-slate-500 font-normal"> /mo</span></div>
                     <ul class="space-y-4 mb-10 text-slate-400 text-sm">
-                        <li class="flex items-center gap-2">🟢 Custom Legal Prompts</li>
-                        <li class="flex items-center gap-2">🟢 API Integration Access</li>
+                        <li class="flex items-center gap-2">🟢 Unlimited Audits</li>
                         <li class="flex items-center gap-2">🟢 Multi-User Dashboard</li>
                         <li class="flex items-center gap-2">🟢 Priority Legal Support</li>
+                        <li class="flex items-center gap-2">🟢 API Integration</li>
                     </ul>
                     <button class="block text-center w-full py-3 rounded-xl border border-slate-700 font-bold hover:bg-slate-800 transition-all">Contact Sales</button>
                 </div>
